# libtribe

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  README.md
docs/: Doxyfile  intro.md  protocol.md
examples/: CMakeLists.txt  message_decoder.cpp
include/tribe/: broadcastModel.hpp  model.hpp  networkAddress.hpp  nodeInfo.hpp  ostream.hpp
include/tribe/protocol/: gossip.hpp  messageParser.hpp  messageWriter.hpp
src/: CMakeLists.txt  broadcastModel.cpp  model.cpp  networkAddress.cpp  ostream.cpp
src/protocol/: decoder.cpp  decoder.hpp  encoder.cpp  encoder.hpp  messageParser.cpp  messageWriter.cpp
test/: CMakeLists.txt  main_gtest.cpp  test_address.cpp  test_broadcastModel.cpp  test_model.cpp  test_protocol.cpp
test/ci/: teamcity_gtest.cpp  teamcity_gtest.h  teamcity_messages.cpp  teamcity_messages.h
